<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">趣背</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_activity2">ListList</string>
    <string name="title_activity_vocab_word__screen">VocabList</string>
    <string name="title_activity_vocab__screen">Vocab</string>
    <string name="action_sort">Sort</string>
    <string name="action_stat">Stat</string>
    <string name="sort_method_0">按评分升序排列</string>
    <string name="sort_method_1">按评分降序排列</string>
    <string name="sort_method_2">按字母升序排列</string>
    <string name="sort_method_3">按字母降序排列</string>
    <string name="sort_method_4">按源文件顺序排列</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="tab_beici">背词</string>
    <string name="tab_chaci">查词</string>
    <string name="tab_setting">设置</string>

    <string name="pull_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开后刷新</string>
    <string name="refreshing" tools:ignore="TypographyEllipsis">正在刷新......</string>

    <string name="importBtnText">导入数据库</string>
    <string name="emptyFolder">目录是空的~</string>

</resources>
