<?xml version="1.0" encoding="UTF-8"?>
<TabHost
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
        
        <TabWidget
            android:id="@android:id/tabs"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0" />
        
            <RadioGroup
                android:gravity="center_vertical"
                android:layout_gravity="bottom"
                android:orientation="horizontal" 
                android:id="@+id/main_radio"
                android:background="@drawable/background_purple"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <RadioButton
                    android:id="@+id/radio_button0"
                    android:layout_marginTop="2.0dip"
                    android:text="@string/tab_beici"
                    android:textColor="@drawable/tab_text"
                    android:drawableTop="@drawable/tab_beici_icon"
                    style="@style/tab_button" />
                <RadioButton
                    android:id="@+id/radio_button1"
                    android:layout_marginTop="2.0dip"
                    android:text="@string/tab_chaci"
                    android:textColor="@drawable/tab_text"
                    android:drawableTop="@drawable/tab_chaci_icon"
                    style="@style/tab_button" />
                <RadioButton
                    android:id="@+id/radio_button2"
                    android:layout_marginTop="2.0dip"
                    android:text="@string/tab_setting"
                    android:textColor="@drawable/tab_text"
                    android:drawableTop="@drawable/tab_setting_icon"
                    style="@style/tab_button" />
            
            </RadioGroup>
            
    </LinearLayout>
    
</TabHost>
